<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/time_slot_root_view"
              android:orientation="vertical"
              tools:context=".ui.TimeSlotFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_slot_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <EditText
            android:id="@+id/timeSlotNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="15"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="Begin"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="End"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <TimePicker
            android:id="@+id/beginTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:timePickerMode="spinner"/>

        <TimePicker
            android:id="@+id/endTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:timePickerMode="spinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/day0InWeekToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_button_color"
            android:textOff="Su"
            android:textOn="Su"/>

        <ToggleButton
            android:id="@+id/day1InWeekToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_button_color"
            android:textOff="Mo"
            android:textOn="Mo"/>

        <ToggleButton
            android:id="@+id/day2InWeekToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_button_color"
            android:textOff="Tu"
            android:textOn="Tu"/>

        <ToggleButton
            android:id="@+id/day3InWeekToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_button_color"
            android:textOff="We"
            android:textOn="We"/>

        <ToggleButton
            android:id="@+id/day4InWeekToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_button_color"
            android:textOff="Th"
            android:textOn="Th"/>

        <ToggleButton
            android:id="@+id/day5InWeekToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_button_color"
            android:textOff="Fr"
            android:textOn="Fr"/>

        <ToggleButton
            android:id="@+id/day6InWeekToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@drawable/toggle_button_color"
            android:textOff="Sa"
            android:textOn="Sa"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/repeatWeeklyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repeat weekly"
            android:checked="true"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>
