<?xml version="1.0" encoding="utf-8"?>

<com.mycompany.servicetime.presentation.timeslots.CustomCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_gravity="center"
    android:longClickable="true"
    card_view:cardElevation="4sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/edit_item_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_edit"/>

        <ImageButton
            android:id="@+id/delete_item_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_delete"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/upper_child_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="School Time"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Switch
                android:id="@+id/activeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="09:00 --- 14:30"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/repeatWeeklyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Repeat weekly"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <TextView
            android:id="@+id/daysTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:text="Mon Sat"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


    </LinearLayout>
</com.mycompany.servicetime.presentation.timeslots.CustomCardView>