<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/time_slot_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        android:title="Save"
        app:showAsAction="always"/>
</menu>
